--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header {
     justify-content: space-between;
     z-index: 999;
     backdrop-filter:blur(3px);
+    background-image: linear-gradient(to bottom, rgba(49, 185, 144, 0.226) 60%, rgba(255, 255, 255, 0));
 }
 
 
@@ -32,14 +33,7 @@ header {
 .left-content {
     display: flex;
     align-items: center;
-}
-
-.profile-picture img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 3px solid darkgreen;
-    margin-right: 10px;
+    flex: 0.5;
 }
 
 h1 {
@@ -59,7 +53,7 @@ h1 {
 .blue-dark {
     color: hsl(218, 44%, 22%);
 }
-
+/*
 .social-icons img {
     width: 30px;
     height: 30px;
@@ -69,10 +63,33 @@ h1 {
 .social-icons a:first-child img {
     margin-left: 0;
 }
-
+*/
 
 header span {
     font-family: 'Outfit';
+}
+
+.right-content{
+    display: flex;
+    flex: 1.5;
+    justify-content: right;
+}
+
+
+
+ul{
+    list-style-type: none;
+    display: flex;
+    width: 100%;
+    max-width: 400px;
+}
+
+li{
+    margin-right: 20px;
+    font-family: 'Outfit';
+    font-weight: 600;
+    text-decoration: underline;
+    cursor: pointer;
 }
 /*main*/
 main{
@@ -87,9 +104,47 @@ main{
     background-image: linear-gradient(to right, white, hsl(212, 45%, 89%));
     font-family:'Outfit';
 }
+
+.aboutme{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: start;
+    
+    width: 100%;
+}
+
+
+  
+.left-content-aboutme{
+    flex: 1;
+    padding: 20px;
+}
+
+.icon-aspas {
+    transform: scale(-1);
+}
+
+.left-content-aboutme p{
+    font-family: 'Outfit';
+    font-size: 18px;
+    margin-top: 0px;
+}
+
+.right-content-aboutme{
+    flex: 1;
+    text-align:center;
+    padding: 20px;
+}
+
+.right-content-aboutme img{
+    width: 400px;
+    height: 400px;
+    border-radius:10px;
+    
+}
 .content-projects {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap:wrap;
     justify-content: center;
     gap: 20px;
     
@@ -106,15 +161,19 @@ main{
   }
   
   .project:hover {
-    transform: scale(1.05);
-    box-shadow: 0px 0px 10px rgba(83, 83, 82, 0.973);
+    transform: scale(1.02);
+    box-shadow: 5px 5px 20px rgba(91, 255, 206, 0.301);
     
   }
 
-
+.thumbnail{
+    width: 300px;
+    height: 300px;
+}
 
 .thumbnail img {
-    width: 100%;
+    width: 300px;
+    height: 300px;
     height: auto;
     border-radius: 5px;
     margin-bottom: 10px;
@@ -162,4 +221,11 @@ main{
 
 .button-preview{
     background-color: rgb(226, 51, 51);
+}
+
+@media (max-width:800px){
+    .aboutme{
+        flex-direction: column;
+        align-items: center;
+    }
 }
