--- a/style.css
+++ b/style.css
@@ -91,7 +91,100 @@ li{
     text-decoration: underline;
     cursor: pointer;
 }
+
+
+
+
+.landing-container {
+background: #f0f0f0;
+box-sizing: border-box;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 100vw;
+height: 100vh;
+}
+.landing-box {
+border-radius: 20px;
+width: 60px;
+height: 60px;
+background: #f0f0f0;
+box-shadow:  0 0 0 #cccccc,
+                0 0 0 #ffffff,
+                10px 10px 10px #cccccc inset,
+                -10px -10px 10px #ffffff inset;
+animation: anime 3s cubic-bezier(0.16, 1, 0.3, 1) 1s infinite alternate;
+/* animation-fill-mode: forwards; */
+display: flex;
+justify-content: center;
+align-items: center;
+overflow:hidden;
+font-family: 'Outfit';
+font-weight: 700;
+font-size: 48px;
+padding: 10px;
+}
+
+@keyframes anime {
+    0% {
+        width: 60px;
+        height: 60px;
+        background: #f0f0f0;
+        box-shadow:  0 0 0 #cccccc,
+                    0 0 0 #ffffff,
+                    10px 10px 10px #cccccc inset,
+                    -10px -10px 10px #ffffff inset;
+    }
+    25% {
+        width: 60px;
+        height: 60px;
+        background: #f8f8f8;
+        box-shadow:  10px 10px 10px #cccccc,
+                    10px 10px 10px #ffffff,
+                    0 0 0 #cccccc inset,
+                    0 0 0 #ffffff inset;
+    }
+    50% {
+        width: 60px;
+        height: 240px;
+        background: #f8f8f8;
+        box-shadow:  10px 10px 10px #cccccc,
+                    10px 10px 10px #ffffff,
+                    0 0 0 #cccccc inset,
+                    0 0 0 #ffffff inset;
+    }
+    100% {
+        width: 480px;
+        height: 240px;
+        background: #fafafa;
+        box-shadow:  40px 40px 40px #cccccc,
+                    0 0 0 #ffffff,
+                    0 0 0 #cccccc inset,
+                    2px 2px 2px #ffffff inset;
+    }
+
+}
+
+.extend-icon{
+    display: flex;
+    flex-direction: column;
+    gap: 0px;
+    position: absolute;
+    top: 70%;
+    transition: top 0.3s  ;
+    
+}
+
+.extend-icon:hover{
+    top:90%;
+}
+
+.expand{
+    
+}
+
 /*main*/
+
 main{
     padding-top: 100px;
     width: 90%;
@@ -136,11 +229,33 @@ main{
     padding: 20px;
 }
 
-.right-content-aboutme img{
+.card-img{
+    
     width: 400px;
     height: 400px;
-    border-radius:10px;
+    border-radius: 20px;
+    backdrop-filter:blur(29px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 10px 10px 60px rgba(16, 124, 92, 0.582);
     
+}
+
+.card-img h2{
+    font-family: 'Outfit';
+}
+
+.card-img span{
+    font-family: 'Outfit';
+}
+
+.right-content-aboutme img{
+    width: 200px;
+    height: 200px;
+    border-radius:50%;
+    box-shadow: 5px 3px 8px 5px rgba(51, 179, 104, 0.623);
 }
 .content-projects {
     display: flex;
